# django-template-falcon

./: apps_product.csv  pyproject.toml  sqlite3
apps/fixtures/: districts.json
apps/migrations/: 0001_initial.py
